<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">UParty</string>
    <string name="action_settings">Settings</string>
    <string name="buscardiscoteca_bt_buscar">Buscar</string>
    <string name="menu_bt_buscarDisco">Buscar discoteca</string>
    <string name="menu_bt_manual">Manual</string>
    <string name="menu_bt_offline">Sin conexión</string>
    <string name="menu_bt_configuracion">Configuración</string>
    <string name="menu_tv_menuPrincipal">Menú principal</string>
    <string name="menu_bt_buscarCerca">Buscar discotecas cercanas</string>
    <string name="google_maps_api_key">AIzaSyCOBY9VcjXN_NKrF8ZmAQb5fv0K29PAZu4</string>
    <string name="gps_signal_not_found">Señal GPS no econtrada</string>
    <string name="search_signal_gps">Buscando señal GPS</string>
    <string name="search">Buscando</string>
    <string name="gps_signal_found">Señal GPS encontrada</string>
    <string name="buscardiscoteca_tv_buscar_discoteca">Buscar discoteca</string>
    <string name="buscardiscoteca_et_hind_nombre">Nombre discoteca</string>
    <string name="buscardiscoteca_bt_atras">Volver atrás</string>
    <string name="detallediscoteca_tv_hint_nombreDiscoteca">Nombre discoteca</string>
    <string name="detallediscoteca_tv_hint_descripcionDiscoteca">Descripción discoteca</string>
    <string name="buscardiscoteca_bt_mostrarRuta">Mostrar ruta</string>
    <string name="detallediscoteca_rb_text_coche">Coche</string>
    <string name="detallediscoteca_rb_text_caminando">Caminando</string>
    <string name="detallediscoteca_rb_text_trans_publico">Transporte público</string>
    <string name="configuracion_tv_titulo">Menú de configuración</string>
    <string name="configuracion_bt_volver">Volver</string>
    <string name="configuracion_bt_guardar">Guardar</string>
    
    <string name="configuracion_tv_distancia">Distancia máxima: 0m</string>
    <string name="buscardiscoteca_bt_muro">Muro</string>
    <string name="murodiscoteca_tv_hint_muro">Muro</string>
    
</resources>
