<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/configuracion_id_tv_titulo"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#DF0101"
        android:textSize="30sp"
        android:text="@string/configuracion_tv_titulo"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#F2F2Fe"
        android:text="@string/configuracion_tv_distancia"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <SeekBar
            android:id="@+id/configuracion_sb_distancia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="1000" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="#DF0101"
            android:gravity="end" >

            <Button
                android:id="@+id/configuracion_bt_volver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/configuracion_bt_volver"
                android:background="#DF0101"
                android:textColor="#000000" />
            
            <Button
                android:id="@+id/configuracion_bt_guardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/configuracion_bt_guardar"
                android:background="#DF0101"
                android:textColor="#000000" />
		</LinearLayout>
    </RelativeLayout>
    

</LinearLayout>
